# dubora

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  doubao_dbqsfy_1_en.srt  pyproject.toml
deploy/: Dockerfile.pipeline  Dockerfile.task  Dockerfile.web  cloudbuild-task.yaml  cloudbuild-web.yaml  deploy-pipeline.sh  deploy-task.sh  deploy-web.sh  docker-compose.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  DESIGN.md  GCP-DEPLOY.md  IDE-GUIDE.md  MT_TIME_AWARE_GUIDE.md  SUBTITLE_MODEL_ARCHITECTURE.md  cost.txt  issue.txt  mt.txt  ssot.txt
migrations/: 001_introduce_role_id.py  sqlite_to_pg.py
resources/: emotions.json  voices.json
sql/: schema.sql  schema_pg.sql  seed.sql
src/dubora/: cli.py
src/dubora/config/: __init__.py  emotions.json  settings.py
src/dubora/prompts/: __init__.py  mt_context_analysis.yaml  mt_name_translate.yaml  mt_utterance_translate.yaml
src/pikppo/: cli.py
test/: doubao_av_translate.py  doubao_tts.py  name_guard_ssot.py  test_asr.py  test_asr_fusion.py  test_asr_local.py  test_forced_alignment.py  test_request_types.py  test_tts.py  test_voice_clone.py  test_volcengine_api.py  volcengine_ai_translation.py  volcengine_ocr_subtitle.py
test/providers/: __init__.py  asr_doubao.py  asr_fish.py  asr_funasr.py  asr_gemini.py  asr_openai.py  asr_paraformer.py  asr_qwen.py  asr_tencent.py  asr_xfyun.py  base.py  tts_fish.py  tts_gemini.py  tts_indextts.py  tts_volcengine.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
(+169 files in other folders)
