[project]
name = "dubora"
version = "2.0.0"
description = "Dubora monorepo: video dubbing pipeline for Chinese short drama localization"
requires-python = ">=3.9"
# Root package has no runtime dependencies — install sub-packages instead.
# This pyproject.toml exists for dev tooling (pytest, ruff, etc.) only.
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
]
test = [
  "dubora-pipeline",
  "openai>=1.0.0",
  "tencentcloud-sdk-python-asr>=3.0.0",
  "dashscope>=1.14.0",
  "fish-audio-sdk>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
